added sections 2 and 3

--- a/index.html
+++ b/index.html
@@ -89,11 +89,112 @@
               suppose I am here now. Look below, for some of the technologies I
               have been working with recently.
             </p>
+            <ul>
+              <li>Javascript</li>
+              <li>React</li>
+              <li>Node.js</li>
+            </ul>
           </div>
         </section>
-        <div class="portfolio"><%= locals.about || 'Default' %></div>
-        <div class="contact"><%= locals.about || 'Default' %></div>
+        <section class="portfolio">
+          <div class="tagline">
+            <div class="number">2.</div>
+            <div class="title">Some things I've built</div>
+          </div>
+          <div class="project">
+            <div>
+              <img
+                src="https://m.media-amazon.com/images/M/MV5BMTI3ODg3NDE3M15BMl5BanBnXkFtZTYwMTc4MTI3._V1_UY1200_CR73,0,630,1200_AL_.jpg"
+                alt=""
+              />
+            </div>
+            <div class="project-details">
+              <div>
+                <div class="inset-tagline">Featured Project</div>
+                <div class="title">Mars Kids App</div>
+              </div>
+              <div class="inset-body">
+                <p>This is an app for Kids</p>
+              </div>
+              <div class="tech">
+                <ul>
+                  <li>Javascript</li>
+                  <li>HTML/CSS</li>
+                  <li>jQuery</li>
+                </ul>
+              </div>
+              <div class="links">
+                <ul>
+                  <li>
+                    <a href=""><img src="" alt="" />github</a>
+                  </li>
+                  <li>
+                    <a href=""><img src="" alt="" />live site</a>
+                  </li>
+                </ul>
+              </div>
+            </div>
+          </div>
+          <div class="project">
+            <div>
+              <img
+                src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQr2AERGOajqKutrFysw99GQCAPQPfjdStT4g&usqp=CAU"
+                alt=""
+              />
+            </div>
+            <div class="project-details">
+              <div>
+                <div class="inset-tagline">Featured Project</div>
+                <div class="title">Gab Reporter</div>
+              </div>
+              <div class="inset-body">
+                <p>
+                  This is an app to analyze posts to the social media site Gab.
+                  It is possible to conduct a sentiment analysis of individual
+                  posts related to a particular topic, or the site in general.
+                </p>
+              </div>
+              <div class="tech">
+                <ul>
+                  <li>Javascript</li>
+                  <li>HTML/CSS</li>
+                  <li>jQuery</li>
+                </ul>
+              </div>
+              <div class="links">
+                <ul>
+                  <li>
+                    <a href=""><img src="" alt="" />github</a>
+                  </li>
+                  <li>
+                    <a href=""><img src="" alt="" />live site</a>
+                  </li>
+                </ul>
+              </div>
+            </div>
+          </div>
+        </section>
+
+        <section class="contact">
+          <div class="tagline">
+            <div class="number">3.</div>
+            <div class="title">What's next?</div>
+            <div class="headline">Get In Touch</div>
+          </div>
+          <div class="body">
+            <p>
+              I am currently looking for new opportunities in software
+              development. So, whether you have a question or just want to say
+              hi, I’ll try my best to get back to you. My Inbox is always open.
+            </p>
+          </div>
+          <button class="Hi-button">Say Hello</button>
+        </section>
       </main>
+      <div class="footer">
+        <div>Designed and built by Matthew Volny</div>
+        <a href="">Github repo link</a>
+      </div>
     </div>
   </body>
 </html>
