--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
             currently up to.
           </div>
         </div>
-        <section class="about">
+        <section id="about">
           <div class="tagline">
             <div class="number">1.</div>
             <div class="title">About Me</div>
@@ -96,7 +96,7 @@
             </ul>
           </div>
         </section>
-        <section class="portfolio">
+        <section id="portfolio">
           <div class="tagline">
             <div class="number">2.</div>
             <div class="title">Some things I've built</div>
@@ -175,7 +175,7 @@
           </div>
         </section>
 
-        <section class="contact">
+        <section id="contact">
           <div class="tagline">
             <div class="number">3.</div>
             <div class="title">What's next?</div>
@@ -196,5 +196,6 @@
         <a href="">Github repo link</a>
       </div>
     </div>
+    <script src="./scripts.js"></script>
   </body>
 </html>
