altered text content of about-me section

--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
           <div class="name">Matthew Volny</div>
           <div>and I create things with code</div>
           <div>
-            Before ormer scientist and university teacher, I bring a deep
+            As a former scientist and university instructor, I bring a deep
             curiosity and creative perspective to web development. Click on the
             links above or scroll down to learn more about me and see what I am
             currently up to.
@@ -114,28 +114,15 @@
               Hello! My name is Matthew. Before learning to code I was an
               Instructor at the University of Virginia, and a scientist at a
               Biotechnology company. I have always loved learning how complex
-              things work, hence the PhD, but at the same time I have always had
-              a drive to build something useful with that knowledge and
-              understanding. For the past decade I have been doing that in the
-              field of molecular genetics. Diving deep into the published
-              literature, carrying out experiments in the laboratory, and data
-              analysis at my desk. I was even given the opportunity to teach
-              university students - something that I will probably always enjoy
-              doing, though these days my lessons would probably be in computer
-              programming.
-            </p>
-            <p>
-              Fast-forward to today, and you will find me building my skills in
-              the Javascript-stack, building websites, apps, and features as I
-              finish up a 6-month software development bootcamp. I absolutely
-              love this new field of coding. It brings me so much joy to bring a
-              simple idea from a rough sketch on paper to a full-featured
-              application, as does the community of fellow developers that I
-              have met up until this point. I sometimes wonder how software
-              development eluded me for all these years, while I was pursuing a
-              career elsewhere, being just so engaging and creative, but I
-              suppose I am here now. Look below, for some of the technologies I
-              have been working with recently.
+              things work (hence the PhD), but at the same time I have always
+              had a drive to build something useful with that knowledge and
+              understanding. Fast-forward to today, and you will find me
+              building a variety of web applications, and features as I finish
+              up a 6-month software development bootcamp. I absolutely love this
+              new field of coding. It brings me so much joy to bring a simple
+              idea from a rough sketch on paper to a full-featured application,
+              as does the community of fellow developers that I have met up
+              until this point.
             </p>
             <ul>
               <li>Javascript</li>
