changed padding and margin for navigation resume button

--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
             <li><a class="about" href="#about">About</a></li>
             <li><a class="portfolio" href="#portfolio">Portfolio</a></li>
             <li><a class="contact" href="#contact">Contact</a></li>
-            <li class="resume"><a href="">Resume</a></li>
+            <li id="resume"><a href="">Resume</a></li>
           </ul>
         </nav>
       </header>
