added overlap styling to portfolio projects

--- a/index.html
+++ b/index.html
@@ -105,10 +105,7 @@
           </div>
         </div>
         <section id="about">
-          <div class="tagline">
-            <div class="number">1.</div>
-            <div class="title">About Me</div>
-          </div>
+          <div class="title"><span class="number">1.</span> About Me</div>
           <div class="body">
             <p>
               Hello! My name is Matthew. Before learning to code I was an
@@ -132,61 +129,27 @@
           </div>
         </section>
         <section id="portfolio">
-          <div class="tagline">
-            <div class="number">2.</div>
-            <div class="title">Some things I've built</div>
-          </div>
-          <div class="project">
-            <div>
-              <img
-                src="https://m.media-amazon.com/images/M/MV5BMTI3ODg3NDE3M15BMl5BanBnXkFtZTYwMTc4MTI3._V1_UY1200_CR73,0,630,1200_AL_.jpg"
-                alt=""
-              />
-            </div>
-            <div class="project-details">
-              <div>
-                <div class="inset-tagline">Featured Project</div>
-                <div class="title">Mars Kids App</div>
-              </div>
-              <div class="inset-body">
-                <p>This is an app for Kids</p>
-              </div>
-              <div class="tech">
-                <ul>
-                  <li>Javascript</li>
-                  <li>HTML/CSS</li>
-                  <li>jQuery</li>
-                </ul>
-              </div>
-              <div class="links">
-                <ul>
-                  <li>
-                    <a href=""><img src="" alt="" />github</a>
-                  </li>
-                  <li>
-                    <a href=""><img src="" alt="" />live site</a>
-                  </li>
-                </ul>
-              </div>
+          <div>
+            <div class="title">
+              <span class="number">2.</span> Some things I've built
             </div>
           </div>
           <div class="project">
-            <div>
-              <img
-                src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQr2AERGOajqKutrFysw99GQCAPQPfjdStT4g&usqp=CAU"
-                alt=""
-              />
+            <div class="project-images">
+              <img src="./assets/marsRover_1.png" alt="MarsRoverSite" />
             </div>
             <div class="project-details">
-              <div>
+              <div class="tagline">
                 <div class="inset-tagline">Featured Project</div>
-                <div class="title">Gab Reporter</div>
-              </div>
-              <div class="inset-body">
-                <p>
-                  This is an app to analyze posts to the social media site Gab.
-                  It is possible to conduct a sentiment analysis of individual
-                  posts related to a particular topic, or the site in general.
+                <div class="project-name">Mars Kids App</div>
+                <p class="description">
+                  A kids educational app for learning about Mars. Users select a
+                  rover, view its journey (plotted using NASA geoJSON data), and
+                  interact with a map via clickable waypoints. Selection of the
+                  rover also makes visible an animated timeline showing entries
+                  for each year of its journey. These include the date, a
+                  headline, and photos taken by the rover and obtained by
+                  querying NASA’s Mars rover API.
                 </p>
               </div>
               <div class="tech">
@@ -199,17 +162,63 @@
               <div class="links">
                 <ul>
                   <li>
-                    <a href=""><img src="" alt="" />github</a>
+                    <a href=""
+                      ><img src="./assets/icons8-github.svg" alt="github_icon"
+                    /></a>
                   </li>
                   <li>
-                    <a href=""><img src="" alt="" />live site</a>
+                    <a href=""
+                      ><img src="./assets/icons8-external-link.svg" alt="" />
+                    </a>
                   </li>
                 </ul>
               </div>
             </div>
           </div>
+          <div class="project projectEven">
+            <div class="project-details">
+              <div class="tagline">
+                <div class="inset-tagline">Featured Project</div>
+                <div class="project-name">Chat App</div>
+                <p class="description">
+                  Real-time chat application for scheduling private conversation
+                  between two or more users. Visitors enter their registration
+                  information, select a cartoon avatar, and once logged in, have
+                  access to a customized dashboard showing their contacts (with
+                  archived chat history) and contacts’ information. With the
+                  click of a button users can invite others to the site,
+                  expanding their contacts list and providing new chat
+                  opportunities.
+                </p>
+              </div>
+              <div class="tech">
+                <ul>
+                  <li>Javascript</li>
+                  <li>HTML/CSS</li>
+                  <li>Socket.io</li>
+                  <li>MongoDB</li>
+                </ul>
+              </div>
+              <div class="links">
+                <ul>
+                  <li>
+                    <a href=""
+                      ><img src="./assets/icons8-github.svg" alt="github_icon"
+                    /></a>
+                  </li>
+                  <li>
+                    <a href=""
+                      ><img src="./assets/icons8-external-link.svg" alt="" />
+                    </a>
+                  </li>
+                </ul>
+              </div>
+            </div>
+            <div class="project-images">
+              <img src="./assets/marsRover_1.png" alt="MarsRoverSite" />
+            </div>
+          </div>
         </section>
-
         <section id="contact">
           <div class="tagline">
             <div class="number">3.</div>
