added email me button styling

--- a/index.html
+++ b/index.html
@@ -57,9 +57,11 @@
         </div>
         <nav class="main-nav">
           <ul>
-            <li><a class="about" href="#about">About</a></li>
-            <li><a class="portfolio" href="#portfolio">Portfolio</a></li>
-            <li><a class="contact" href="#contact">Contact</a></li>
+            <li><a class="nav-button about" href="#about">About</a></li>
+            <li>
+              <a class="nav-button portfolio" href="#portfolio">Portfolio</a>
+            </li>
+            <li><a class="nav-button contact" href="#contact">Contact</a></li>
             <li id="resume">
               <a href="./public/Matthew Volny - Resume.pdf" target="_blank"
                 >Resume</a
@@ -114,7 +116,7 @@
           <div class="title"><span class="number">1.</span> About Me</div>
           <div class="body">
             <p>
-              Hello! My name is Matthew. Before learning to code I was an
+              Hello! My name is Matthew! Before learning to code I was an
               Instructor at the University of Virginia, and a scientist at a
               Biotechnology company. I have always loved learning how complex
               things work, but at the same time I have always had a drive to
@@ -368,7 +370,9 @@
               hi, I'll try my best to get back to you. My Inbox is always open.
             </p>
           </div>
-          <button class="Hi-button">Say Hello</button>
+          <a class="hello-button" href="mailto:matthew.volny@gmail.com"
+            >Say Hello</a
+          >
         </section>
       </main>
       <div class="footer">
