re-wrote about me section

--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
         <div class="intro">
           <div class="lead-in">Hi there, my name is</div>
           <div class="name">Matthew Volny</div>
-          <div>and I create things with code</div>
+          <div>and I create things with code.</div>
           <div class="intro-blurb">
             As a former scientist and university instructor, I bring a deep
             curiosity and creative perspective to web development. Click on the
@@ -115,20 +115,14 @@
         <section id="about">
           <div class="title"><span class="number">1.</span> About Me</div>
           <div class="body">
-            <p>
-              Hello! My name is Matthew! Before learning to code I was an
-              Instructor at the University of Virginia, and a scientist at a
-              Biotechnology company. I have always loved learning how complex
-              things work, but at the same time I have always had a drive to
-              build something useful with that knowledge and understanding.
-              Fast-forward to today, and you will find me building a variety of
-              web applications, and features as I finish up a 6-month software
-              development bootcamp. I absolutely love this new field of coding.
-              It brings me so much joy to bring a simple idea from a rough
-              sketch on paper to a full-featured application, as does the
-              community of fellow developers that I have met up until this
-              point.
-            </p>
+            <div class="paragraph">
+              Hello, My name is Matthew! I am a former PhD scientist and
+              university instructor, who recently transitioned into a career in
+              software development. I am naturally inquisitive, comfortable
+              problem solving, and eager to learn new skills and technologies.
+              It brings me great joy to take a simple idea from rough sketch to
+              fully-featured application.
+            </div>
             <ul>
               <li>Javascript</li>
               <li>React</li>
