added about me styling

--- a/index.html
+++ b/index.html
@@ -107,27 +107,49 @@
           <div>and I create things with code.</div>
           <div class="intro-blurb">
             As a former scientist and university instructor, I bring a deep
-            curiosity and creative perspective to web development. Click on the
-            links above or scroll down to learn more about me and see what I am
-            currently up to.
+            curiosity and creative perspective to web development. Click the
+            links above or scroll down to learn more about me and
+            <br />
+            what I am currently up to.
           </div>
         </div>
         <section id="about">
           <div class="title"><span class="number">1.</span> About Me</div>
-          <div class="body">
-            <div class="paragraph">
-              Hello, My name is Matthew! I am a former PhD scientist and
-              university instructor, who recently transitioned into a career in
-              software development. I am naturally inquisitive, comfortable
-              problem solving, and eager to learn new skills and technologies.
-              It brings me great joy to take a simple idea from rough sketch to
-              fully-featured application.
+          <div class="about-me-flex">
+            <div class="intro-and-skills-flex">
+              <div class="into">
+                Hello, My name is Matthew! I am a former PhD scientist and
+                university instructor, who recently transitioned into a career
+                in software development. I am naturally inquisitive, comfortable
+                problem solving, and eager to learn new skills and technologies.
+                It brings me great joy to take a simple idea from rough sketch
+                to fully-featured application.
+              </div>
+              <div class="skills">
+                <div>Things I know</div>
+                <!-- <div>Languages: <span>Javascript</span>HTML/CSS<span></span></div>
+            <div>Libraries/Frameworks</div>
+            <div>Node.js</div>
+            <div>React</div>
+            <div>Bootstrap</div>
+            <div>jQuery</div>
+            <div>Databases</div>
+            <div>PostgreSQL</div>
+            <div>MongoDB</div> -->
+                <ul class="listed-skills-flex">
+                  <li>Javascript</li>
+                  <li>HTML/CSS</li>
+                  <li>Node.js</li>
+                  <li>React</li>
+                  <li>Redux</li>
+                  <li>PostgreSQL</li>
+                  <li>MongoDB</li>
+                </ul>
+              </div>
             </div>
-            <ul>
-              <li>Javascript</li>
-              <li>React</li>
-              <li>Node.js</li>
-            </ul>
+            <div class="profile-image-container">
+              <!-- <img src="./assets/scooter-muppet.png" alt="" /> -->
+            </div>
           </div>
         </section>
         <section id="portfolio">
